--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ MarkupSafe==3.0.2
 mysql-connector-python==9.4.0
 numpy==2.3.3
 openpyxl==3.1.5
-packaging==25.0git add
+packaging==25.0
 pandas==2.3.2
 python-dateutil==2.9.0.post0
 pytz==2025.2
